--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="row">
         <!-- 倒數計時 -->
         <div class="item left col-lg-4 col-md-4">
-          <a href="#">
+          <a class="discount" href="#">
             <div class="today">
               <h4>限時特殺</h4>
               <h5><i class="bi-lightning-fill"></i></h5>
@@ -175,16 +175,16 @@
     
     <!-- 美味甜點 -->
     <div class="project container">
-      <div class="title">
+      <div>
           <h2>美味甜點</h2>            
       </div>        
        <!-- 種類篩選 -->
       <div class="filter container">
         <div class="row">
-          <a class="filter-item col-lg-3 col-md-3 col col-sm-6" data-index="0" href="javascript:;">全部</a>
-          <a class="filter-item col-lg-3 col-md-3 col col-sm-6" data-index="1" href="javascript:;">蛋糕</a>
-          <a class="filter-item col-lg-3 col-md-3 col col-sm-6" data-index="2" href="javascript:;">餅乾</a>
-          <a class="filter-item col-lg-3 col-md-3 col col-sm-6" data-index="3" href="javascript:;">巧克力</a>
+          <a class="filter-item col-lg-3 col-md-3 col col-sm-6 col-6" data-index="0" href="javascript:;">全部</a>
+          <a class="filter-item col-lg-3 col-md-3 col col-sm-6 col-6" data-index="1" href="javascript:;">蛋糕</a>
+          <a class="filter-item col-lg-3 col-md-3 col col-sm-6 col-6" data-index="2" href="javascript:;">餅乾</a>
+          <a class="filter-item col-lg-3 col-md-3 col col-sm-6 col-6" data-index="3" href="javascript:;">巧克力</a>
         </div>
                       
       </div>
@@ -200,10 +200,8 @@
       <h2>熱銷好評</h2>   
       <div class="row">
         <div class="user">
-          <!-- <i class="avator bi-person-circle"></i>
-          <span class="username">訪客</span> -->
         </div>        
-        <textarea id="contents" class="texts" name="contents" placeholder="留下您的評論吧！"></textarea>              
+        <textarea id="contents" class="texts" name="contents" maxlength="200" placeholder="留下您的評論吧！"></textarea>              
         <p class="words">0/200字</p>
         <button class="sent">送出</button> 
       </div>
