--- a/products.html
+++ b/products.html
@@ -113,7 +113,7 @@
         </div>        
         <div class="content">
             <div class="row">
-                <div class="select col-lg-3 col-md-6">
+                <div class="select col-lg-3 col-md-6 col-sm-6 col-6">
                     <a class="goods-box" href="#">
                       <div class="pic">                        
                       </div>
@@ -126,7 +126,7 @@
                       </div>
                     </a>
                 </div>
-                <div class="select col-lg-3 col-md-6">
+                <div class="select col-lg-3 col-md-6 col-sm-6 col-6">
                     <a class="goods-box" href="#">
                       <div class="pic"></div>
                       <div class="text">
@@ -138,7 +138,7 @@
                       </div>
                     </a>
                 </div>
-                <div class="select col-lg-3 col-md-6">
+                <div class="select col-lg-3 col-md-6 col-sm-6 col-6">
                     <a class="goods-box" href="#">
                       <div class="pic"></div>
                       <div class="text">
@@ -150,7 +150,7 @@
                       </div>
                     </a>
                 </div>
-                <div class="select col-lg-3 col-md-6">
+                <div class="select col-lg-3 col-md-6 col-sm-6 col-6">
                     <a class="goods-box" href="#">
                       <div class="pic"></div>
                       <div class="text">
@@ -170,7 +170,7 @@
     <!-- 商品列表 -->
     <div class="all-products">
         <div class="project container">
-            <div class="title">
+            <div >
                 <h2>美味甜點</h2>            
             </div>        
              <!-- 價格篩選 -->
